tests/files/parser_tests/should_fail/007.cmdr
//Not an expression
x = ""x"";